[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-helpers"
version = "0.1.0"
authors = [
    { name = "Tyler Woodfin", email = "feedback-python-helpers@tylerwoodfin.com" },
]
description = "A collection of Python helper functions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
]